--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@
 # ToDo: Write a great welcome
 #
 
-Jean Pierre Dudey jeandudey           <>
+Jean Pierre Dudey jeandudey           <me@jeandudey.tech>
 Gustavo Grisales  gustavosinbandera1  <>
 Luis Ruiz         luisanoo            <luisan00@hotmail.com>
 Kevin Velasco     xkevin190           <>
