--- a/AUTHORS
+++ b/AUTHORS
@@ -5,7 +5,7 @@
 Jean Pierre Dudey jeandudey           <me@jeandudey.tech>
 Gustavo Grisales  gustavosinbandera1  <>
 Luis Ruiz         luisanoo            <luisan00@hotmail.com>
-Kevin Velasco     xkevin190           <>
+Kevin Velasco     xkevin190           <kevinvelasco193@gmail.com>
 Antonio           Antomabu            <>
 Randy Brito       rdymac              <>
 Stephanie Nogales stephien            <>
