--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,7 @@
 #
 
 Jean Pierre Dudey jeandudey           <me@jeandudey.tech>
-Gustavo Grisales  gustavosinbandera1  <>
+Gustavo Grisales  gustavosinbandera1  <gustavosinbandera1@hotmail.com>
 Luis Ruiz         luisanoo            <luisan00@hotmail.com>
 Kevin Velasco     xkevin190           <kevinvelasco193@gmail.com>
 Antonio           Antomabu            <>
