--- a/AUTHORS
+++ b/AUTHORS
@@ -1,12 +1,14 @@
 #
-# ToDo: Write a great welcome
+# Here is an inevitably incomplete list in alphabetical order
+# of people who have submitted patches, reported bugs, added translations,
+# helped answer newbie questions, and generally made Locha Mesh available and  much better:
 #
 
-Jean Pierre Dudey jeandudey           <me@jeandudey.tech>
+Antonio           Antomabu            <...>
 Gustavo Grisales  gustavosinbandera1  <gustavosinbandera1@hotmail.com>
-Luis Ruiz         luisanoo            <luisan00@hotmail.com>
+Jean Pierre Dudey jeandudey           <me@jeandudey.tech>
 Kevin Velasco     xkevin190           <kevinvelasco193@gmail.com>
-Antonio           Antomabu            <>
-Randy Brito       rdymac              <>
-Stephanie Nogales stephien            <>
-??                xmrhaelan           <>
+Luis Ruiz         luisanoo            <luisan00@hotmail.com>
+Randy Brito       rdymac              <...>
+Stephanie Nogales stephien            <...>
+xmrhaelan         xmrhaelan           <...>
